--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/minisweeper.css">
+    <title>Minesweeper</title>
+    <link rel="stylesheet" href="./css/minesweeper.min.css">
 </head>
-
 <body>
-    <div id="game">minisweper</div>
+    <div id="game">MINESWEEPER GAME</div>
     <script src="./js/Minesweeper.js"></script>
 </body>
 </html>
